# platformer-MosesUgwulo

./: CMakeLists.txt
lab_7_platformer/: platformer_main.cpp
lib_ecm/: ecm.cpp
lib_maths/: maths.h
src/: platformer_main.cpp
src/components/: cmp_enemy_turret.cpp  cmp_player_physics.cpp  cmp_sprite.cpp  cmp_sprite.h  cmp_text.h
src/scenes/: scene_level2.cpp  scene_level3.cpp
